[project]
name = "planet"
version = "0.1.0"
description = "Protein-Ligand Affinity prediction NETwork"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "rdkit>=2022.9.1",
    "tqdm>=4.64",
]

# By default PyTorch is installed from the PyTorch CUDA 12.1 index.
# For CPU-only: run `uv sync` after changing the index URL to
#   https://download.pytorch.org/whl/cpu
# For a different CUDA version change the cu121 suffix accordingly.
[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
